--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,68 @@
-.thumbsBox {
-  width: 50%;
-  height: 50%;
-  border: 4px solid #000000;
-}
-
-.pTop {
-  position: absolute;
-  top: 0px;
-  border: 20px solid #000000;
-}
-
-.pBot {
-  position: absolute;
-  bottom: 0px;
-  border: 20px solid #000000;
-}
-
-.pLeft {
-  position: absolute;
-  left: 0px;
-  border: 20px solid #000000;
-}
-
-.pRight {
-  position: absolute;
-  right: 0px;
-  border: 20px solid #000000;
-}
-
-#tUp {
-  background-color: #00ff00;
-}
-
-#tUp:hover {
-  background-color: #007000;
-}
-
-#tWiggle {
-  background-color: #0000ff;
-}
-
-#tWiggle:hover {
-  background-color: #000085;
-}
-
-#tDown {
-  background-color: #ff0000;
-}
-
-#tDown:hover {
-  background-color: #700000;
-}
-
-#tOops {
-  background-color: #ffff00;
-}
-
-#tOops:hover {
-  background-color: #707000;
-}
-
-* {
-  align-items: center;
-  justify-content: center;
-  font-size: 100px;
-  text-align: center;
-  color: #000000;
-  text-decoration: none;
-}
-div {
-  background-color: white;
-}
-
-body {
-  background-color: black;
-}
-
-#content {
-  border: 1px dashed purple;
-}
-
-#bodyBox {
-  border: 1px solid purple;
-  margin: 20px;
-}
-
-.paraBox {
-  border: 1px solid purple;
-  margin: 20px;
-  color: purple;
-}
-
-h1 {
-  border: 1px dashed purple;
-}
-
-h1 {
-  color: purple;
-}
+  body {
+    background-color: #6600cc;
+  }
+  #content {
+    width: 50%;
+    margin: auto;
+    font-size: 34px;
+    border: 30px solid blue;
+    text-shadow: 2px 2px blue;
+  }
+  #headerBox {
+    background-color: #6600cc;
+    height: 200px;
+    text-align: center;
+    font-size: 100px;
+    font-style: italic;
+    text-shadow: 2px 2px blue;
+  }
+  #menuBox {
+    background-color: #0000FF;
+    text-align: center;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  #backBox {
+    background-color: #0000FF;
+    text-align: center;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+    font-size: 50px;
+    margin-left: 400px;
+    margin-right: 400px;
+  }
+  a {
+    color: #FFFFFF;
+  }
+  .linkBox {
+    height: 100px;
+    display: inline;
+    padding: 30px;
+    font-size: 75px;
+    border: 5px solid black;
+  }
+  .blogBox {
+    background-color: #6600cc;
+  }
+  .blogBox h1 {
+    font-size: 30px;
+    border: 20px solid blue;
+    text-indent: 30px;
+  }
+  .blogBox img {
+    max-width: 100%;
+    height: auto;
+    float: left;
+  }
+  .blogBox p {
+    font-size: 35px;
+    text-shadow: 2px 2px blue;
+  }
+  .blogBox img {
+    float: left;
+    width: 600px;
+    height: 600px;
+  }
